--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Desain Tampilan dari sini-->
 <html>
     <head>
         <title>Makespan</title>
@@ -66,6 +67,9 @@
     </body>
     <script src="res/jquery-3.1.1.min.js" type="text/javascript"></script>
     <script src="main.js?v=5" type="text/javascript"></script>
+
+<!--Desain Tampilan berhenti di sini-->
+
     <script type="text/javascript">
         var job = 0;
         var machine = 0;
@@ -73,6 +77,7 @@
 
         var jobFlow, proses;
 		
+//		untuk output table
 		function cT(id, title, subtitle){
 			header = document.createElement('h2');
 			header.innerHTML = title;
