--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Uptime calculator</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 <body>
-    <input id="request" type="text">
-    <button id="start">Get Uptime</button>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <a href="test.json" class="btn btn-primary">Check Data</a>
+                <button id="start" class="btn btn-success">Get Uptime</button>
+            </div>
+            <div class="col-md-12 jumbotron">
+                <div id="output"></div>
+            </div>
+        </div>
+    </div>
+    
 
     <!-- <table id="output">
         <tr>
@@ -17,7 +29,9 @@
         </tr>
     </table> -->
 
-    <div id="output"></div>
 </body>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 <script src="uptime.js"></script>
 </html>
