--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col">
                 <a href="test.json" class="btn btn-primary">Check Data</a>
                 <button id="start" class="btn btn-success">Get Uptime</button>
             </div>
-            <div class="col-md-12 jumbotron">
+        </div>
+        <div class="row">
+            <div class="col jumbotron">
                 <div id="output"></div>
             </div>
         </div>
